reduce height of Legend to prevent overflow

--- a/src/components/mapElements/Legend.module.scss
+++ b/src/components/mapElements/Legend.module.scss
@@ -60,6 +60,9 @@
     width: 70%;
     padding: 0.75rem 0.5rem 0.5rem 1rem;
 
+    height: 90%;
+    overflow: auto;
+
     h3 {
       font-size: 4rem;
       font-family: var(--continent-font-bold);
